Вносит правки в разметку согласно ТЗ и первой проверки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,7 +11,7 @@
 
 <body class="page__body">
   <!-- Шапка сайта -->
-  <header class="page__header">
+  <header class="page__header page__header--catalog">
     <!-- Логотип сайта -->
     <a class="logo-img" href="index.html" aria-current="page">
       <img class="logo-img__icon" src="#" width="999" height="999" alt="#">
@@ -37,7 +37,7 @@
     </nav>
     <!-- Гамбургер меню -->
     <button class="toggle" type="button">
-      <span class="visually-hidden">Меню</span>
+      <span class="visually-hidden">Переключение меню</span>
     </button>
   </header>
   <!-- Основное содержание страницы -->
@@ -51,119 +51,133 @@
           <a class="catalog__link" href="#">
             <img class="catalog__image" src="#" width="999" height="999" alt="#">
           </a>
-          <a class="catalog__subtitle" href="#">Cat Energy PRO 500 г</a>
+          <a class="catalog__link" href="#">
+            <h3 class="catalog__subtitle">Cat Energy Pro 500&nbsp;г</h3>
+          </a>
           <!-- Блок с характеристиками продукта -->
           <dl class="catalog__product product">
             <dt class="product__weight">Масса</dt>
-            <dd class="product__value">500 г</dd>
+            <dd class="product__value">500&nbsp;г</dd>
             <dt class="product__flavor">Вкус</dt>
             <dd class="product__value">Курица</dd>
             <dt class="product__price">Цена</dt>
-            <dd class="product__value">700 ₽</dd>
+            <dd class="product__value">700&nbsp;₽</dd>
           </dl>
-          <button class="catalog__button button" type="submit">Заказать</button>
+          <a class="catalog__button button" href="#">Заказать</a>
         </li>
         <!-- "Элемент списка" -->
         <li class="catalog__item">
           <a class="catalog__link" href="#">
             <img class="catalog__image" src="#" width="999" height="999" alt="#">
           </a>
-          <a class="catalog__subtitle" href="#">Cat Energy PRO 1000 г</a>
+          <a class="catalog__link" href="#">
+            <h3 class="catalog__subtitle">Cat Energy Pro 1000&nbsp;г</h3>
+          </a>
           <!-- Блок с характеристиками продукта -->
           <dl class="catalog__product product">
             <dt class="product__weight">Масса</dt>
-            <dd class="product__value">1000 г</dd>
+            <dd class="product__value">1000&nbsp;г</dd>
             <dt class="product__flavor">Вкус</dt>
             <dd class="product__value">Курица</dd>
             <dt class="product__price">Цена</dt>
-            <dd class="product__value">1000 ₽</dd>
+            <dd class="product__value">1000&nbsp;₽</dd>
           </dl>
-          <button class="catalog__button button" type="submit">Заказать</button>
+          <a class="catalog__button button" href="#">Заказать</a>
         </li>
         <!-- "Элемент списка" -->
         <li class="catalog__item">
           <a class="catalog__link" href="#">
             <img class="catalog__image" src="#" width="999" height="999" alt="#">
           </a>
-          <a class="catalog__subtitle" href="#">Cat Energy PRO 500 г</a>
+          <a class="catalog__link" href="#">
+            <h3 class="catalog__subtitle">Cat Energy Pro 500&nbsp;г</h3>
+          </a>
           <!-- Блок с характеристиками продукта -->
           <dl class="catalog__product product">
             <dt class="product__weight">Масса</dt>
-            <dd class="product__value">500 г</dd>
+            <dd class="product__value">500&nbsp;г</dd>
             <dt class="product__flavor">Вкус</dt>
             <dd class="product__value">Рыба</dd>
             <dt class="product__price">Цена</dt>
-            <dd class="product__value">700 ₽</dd>
+            <dd class="product__value">700&nbsp;₽</dd>
           </dl>
-          <button class="catalog__button button" type="submit">Заказать</button>
+          <a class="catalog__button button" href="#">Заказать</a>
         </li>
         <!-- "Элемент списка" -->
         <li class="catalog__item">
           <a class="catalog__link" href="#">
             <img class="catalog__image" src="#" width="999" height="999" alt="#">
           </a>
-          <a class="catalog__subtitle" href="#">Cat Energy PRO 1000 г</a>
+          <a class="catalog__link" href="#">
+            <h3 class="catalog__subtitle">Cat Energy Pro 1000&nbsp;г</h3>
+          </a>
           <!-- Блок с характеристиками продукта -->
           <dl class="catalog__product product">
             <dt class="product__weight">Масса</dt>
-            <dd class="product__value">1000 г</dd>
+            <dd class="product__value">1000&nbsp;г</dd>
             <dt class="product__flavor">Вкус</dt>
             <dd class="product__value">Рыба</dd>
             <dt class="product__price">Цена</dt>
-            <dd class="product__value">1000 ₽</dd>
+            <dd class="product__value">1000&nbsp;₽</dd>
           </dl>
-          <button class="catalog__button button" type="submit">Заказать</button>
+          <a class="catalog__button button" href="#">Заказать</a>
         </li>
         <!-- "Элемент списка" -->
         <li class="catalog__item">
           <a class="catalog__link" href="#">
             <img class="catalog__image" src="#" width="999" height="999" alt="#">
           </a>
-          <a class="catalog__subtitle" href="#">Cat Energy SLIM 500 г</a>
+          <a class="catalog__link" href="#">
+            <h3 class="catalog__subtitle">Cat Energy Slim 500&nbsp;г</h3>
+          </a>
           <!-- Блок с характеристиками продукта -->
           <dl class="catalog__product product">
             <dt class="product__weight">Масса</dt>
-            <dd class="product__value">500 г</dd>
+            <dd class="product__value">500&nbsp;г</dd>
             <dt class="product__flavor">Вкус</dt>
             <dd class="product__value">Гречка</dd>
             <dt class="product__price">Цена</dt>
-            <dd class="product__value">400 ₽</dd>
+            <dd class="product__value">400&nbsp;₽</dd>
           </dl>
-          <button class="catalog__button button" type="submit">Заказать</button>
+          <a class="catalog__button button" href="#">Заказать</a>
         </li>
         <!-- "Элемент списка" -->
         <li class="catalog__item">
           <a class="catalog__link" href="#">
             <img class="catalog__image" src="#" width="999" height="999" alt="#">
           </a>
-          <a class="catalog__subtitle" href="#">Cat Energy SLIM 1000 г</a>
+          <a class="catalog__link" href="#">
+            <h3 class="catalog__subtitle">Cat Energy Slim 1000&nbsp;г</h3>
+          </a>
           <!-- Блок с характеристиками продукта -->
           <dl class="catalog__product product">
             <dt class="product__weight">Масса</dt>
-            <dd class="product__value">1000 г</dd>
+            <dd class="product__value">1000&nbsp;г</dd>
             <dt class="product__flavor">Вкус</dt>
             <dd class="product__value">Гречка</dd>
             <dt class="product__price">Цена</dt>
-            <dd class="product__value">700 ₽</dd>
+            <dd class="product__value">700&nbsp;₽</dd>
           </dl>
-          <button class="catalog__button button" type="submit">Заказать</button>
+          <a class="catalog__button button" href="#">Заказать</a>
         </li>
         <!-- "Элемент списка" -->
         <li class="catalog__item">
           <a class="catalog__link" href="#">
             <img class="catalog__image" src="#" width="999" height="999" alt="#">
           </a>
-          <a class="catalog__subtitle" href="#">Cat Energy slim 500 г</a>
+          <a class="catalog__link" href="#">
+            <h3 class="catalog__subtitle">Cat Energy Slim 500&nbsp;г</h3>
+          </a>
           <!-- Блок с характеристиками продукта -->
           <dl class="catalog__product product">
             <dt class="product__weight">Масса</dt>
-            <dd class="product__value">500 г</dd>
+            <dd class="product__value">500&nbsp;г</dd>
             <dt class="product__flavor">Вкус</dt>
             <dd class="product__value">Рис</dd>
             <dt class="product__price">Цена</dt>
-            <dd class="product__value">500 ₽</dd>
+            <dd class="product__value">500&nbsp;₽</dd>
           </dl>
-          <button class="catalog__button button" type="submit">Заказать</button>
+          <a class="catalog__button button" href="#">Заказать</a>
         </li>
         <li class="catalog__item catalog__item--download">
           <h3 class="catalog__subtitle">Показать ещё 100500 товаров</h3>
@@ -179,39 +193,47 @@
       <ul class="additionally__list other-list">
         <!-- "Элемент списка" -->
         <li class="other-list__item">
-          <h3 class="other-list__subtitle">Сахарозаменитель</h3>
+          <a class="other-list__link" href="#">
+            <h3 class="other-list__subtitle">Сахарозаменитель</h3>
+          </a>
           <dl class="other-list__item-description">
             <dt class="other-list__item-quantityt">1 упаковка (100 г)</dt>
-            <dd class="other-list__item-price">200 ₽</dd>
+            <dd class="other-list__item-price">200&nbsp;₽</dd>
           </dl>
-          <button class="other-list__button button" type="button">Заказать</button>
+          <a class="other-list__button button" href="#">Заказать</a>
         </li>
         <!-- "Элемент списка" -->
         <li class="other-list__item">
-          <h3 class="other-list__subtitle">Питьевая вода</h3>
+          <a class="other-list__link" href="#">
+            <h3 class="other-list__subtitle">Питьевая вода</h3>
+          </a>
           <dl class="other-list__item-description">
             <dt class="other-list__item-quantityt">5 литров</dt>
-            <dd class="other-list__item-price">50 ₽</dd>
+            <dd class="other-list__item-price">50&nbsp;₽</dd>
           </dl>
-          <button class="other-list__button button" type="button">Заказать</button>
+          <a class="other-list__button button" href="#">Заказать</a>
         </li>
         <!-- "Элемент списка" -->
         <li class="other-list__item">
-          <h3 class="other-list__subtitle">Молоко</h3>
+          <a class="other-list__link" href="#">
+            <h3 class="other-list__subtitle">Молоко</h3>
+          </a>
           <dl class="other-list__item-descriptiont">
             <dt class="other-list__item-quantityt">1 литр</dt>
-            <dd class="other-list__item-price">100 ₽</dd>
+            <dd class="other-list__item-price">100&nbsp;₽</dd>
           </dl>
-          <button class="other-list__button button" type="button">Заказать</button>
+          <a class="other-list__button button" href="#">Заказать</a>
         </li>
         <!-- "Элемент списка" -->
         <li class="other-list__item">
-          <h3 class="other-list__subtitle">Витамины</h3>
+          <a class="other-list__link" href="#">
+            <h3 class="other-list__subtitle">Витамины</h3>
+          </a>
           <dl class="other-list__item-descriptiont">
             <dt class="other-list__item-quantityt">1 упаковка (30 г)</dt>
-            <dd class="other-list__item-price">300 ₽</dd>
+            <dd class="other-list__item-price">300&nbsp;₽</dd>
           </dl>
-          <button class="other-list__button button" type="button">Заказать</button>
+          <a class="other-list__button button" href="#">Заказать</a>
         </li>
       </ul>
       <div class="additionally__present">
@@ -223,12 +245,12 @@
       <h2 class="promotions__title">Акции и новинки</h2>
       <p class="promotions__text">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
       <!-- Форма подписки на акции и новинки -->
-      <form class="promotions__form" action="#" method="post">
-        <label class="promotions__label" for="email">
+      <form class="promotions__form form" action="https://echo.htmlacademy.ru" method="post">
+        <label class="form__label" for="email">
           <span class="visually-hidden">Введите ваш e-mail:</span>
         </label>
-        <input class="promotions__input" id="email" name="email" type="email" placeholder="кuklachev@gmail.com" required>
-        <button class="promotions__button button" type="submit">Подписаться</button>
+        <input class="form__input" id="email" name="email" type="email" placeholder="кuklachev@gmail.com" required>
+        <button class="form__button button" type="submit">Подписаться</button>
       </form>
     </section>
     <!-- Секция с контактными данными -->
@@ -276,7 +298,7 @@
       </li>
     </ul>
     <!-- Блок с логотипом сайта разработчика -->
-    <a class="developer" href="https://htmlacademy.ru/">HTML Academy</a>
+    <a class="developer" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
   </footer>
 </body>
 
