--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
 
 <body class="page__body">
   <!-- Шапка сайта -->
-  <header class="page__header">
+  <header class="page__header page__header--index">
     <!-- Логотип сайта -->
     <a class="logo-img" href="index.html" aria-current="page">
       <img class="logo-img__icon" src="#" width="999" height="999" alt="#">
@@ -37,7 +37,7 @@
     </nav>
     <!-- Гамбургер меню -->
     <button class="toggle" type="button">
-      <span class="visually-hidden">Меню</span>
+      <span class="visually-hidden">Переключение меню</span>
     </button>
   </header>
   <!-- Основное содержание страницы -->
@@ -46,7 +46,7 @@
     <section class="intro">
       <h1 class="intro__title">Функциональное питание для котов</h1>
       <p class="intro__slogan">Занялся собой? Займись котом!</p>
-      <img class="intro__image" src="#" alt="#" width="999" height="999">
+      <img class="intro__image" src="#" width="999" height="999" alt="#">
       <a class="intro__button button" href="#">Подобрать программу</a>
     </section>
     <!-- Секция с программами питания -->
@@ -96,6 +96,8 @@
         <dt class="result__criterion">Затрачено времени</dt>
         <dd class="result__value">60 дней</dd>
       </dl>
+      <!-- Блок со слайдером -->
+      <div class="result__preview"></div>
     </section>
     <!-- Секция с контактными данными -->
     <section class="contacts">
@@ -142,7 +144,7 @@
       </li>
     </ul>
     <!-- Блок с логотипом сайта разработчика -->
-    <a class="developer" href="https://htmlacademy.ru/">HTML Academy</a>
+    <a class="developer" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
   </footer>
 </body>
 
