--- a/source/index.html
+++ b/source/index.html
@@ -11,11 +11,11 @@
 
 <body class="page__body">
   <!-- Шапка сайта -->
-  <header class="page__header page__header--index">
+  <header class="page__header">
     <!-- Логотип сайта -->
-    <a class="logo-img" href="index.html" aria-current="page">
-      <img class="logo-img__icon" src="#" width="999" height="999" alt="#">
-      <img class="logo-img__text" src="#" width="999" height="999" alt="#">
+    <a class="logo" href="index.html" aria-current="page">
+      <img class="logo__icon" src="#" width="999" height="999" alt="#">
+      <img class="logo__text" src="#" width="999" height="999" alt="#">
     </a>
     <!-- Навигация по сайту -->
     <nav class="navigation">
@@ -35,7 +35,7 @@
         </li>
       </ul>
     </nav>
-    <!-- Гамбургер меню -->
+    <!-- Бургер меню -->
     <button class="toggle" type="button">
       <span class="visually-hidden">Переключение меню</span>
     </button>
@@ -44,72 +44,82 @@
   <main class="page__main">
     <!-- Секция с вступительной частью -->
     <section class="intro">
-      <h1 class="intro__title">Функциональное питание для котов</h1>
-      <p class="intro__slogan">Занялся собой? Займись котом!</p>
-      <img class="intro__image" src="#" width="999" height="999" alt="#">
-      <a class="intro__button button" href="#">Подобрать программу</a>
+      <div class="container">
+        <h1 class="intro__title">Функциональное питание для котов</h1>
+        <p class="intro__slogan">Занялся собой? Займись котом!</p>
+        <img class="intro__image" src="#" width="999" height="999" alt="#">
+        <a class="intro__button button" href="#">Подобрать программу</a>
+      </div>
     </section>
     <!-- Секция с программами питания -->
     <section class="programs">
-      <h2 class="visually-hidden">Основные программы питания</h2>
-      <!-- Список программ питания -->
-      <ul class="programs__list">
-        <li class="programs__item">
-          <h3 class="programs__subtitle">Похудение</h3>
-          <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-          <a class="programs__link" href="#">Каталог Slim</a>
-        </li>
-        <li class="programs__item">
-          <h3 class="programs__subtitle">Набор массы</h3>
-          <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-          <a class="programs__link" href="#">Каталог Pro</a>
-        </li>
-      </ul>
+      <div class="container">
+        <h2 class="visually-hidden">Основные программы питания</h2>
+        <!-- Список программ питания -->
+        <ul class="programs__list">
+          <li class="programs__item">
+            <h3 class="programs__subtitle">Похудение</h3>
+            <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+            <a class="programs__link" href="#">Каталог Slim</a>
+          </li>
+          <li class="programs__item">
+            <h3 class="programs__subtitle">Набор массы</h3>
+            <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+            <a class="programs__link" href="#">Каталог Pro</a>
+          </li>
+        </ul>
+      </div>
     </section>
     <!-- Секция с преимуществами функционального питания -->
     <section class="advantages">
-      <h2 class="advantages__title">Как это работает</h2>
-      <!-- Преимущества функционального питания -->
-      <ul class="advantages__list">
-        <li class="advantages__item">
-          <p class="advantages__description advantages__description--nutrients">Функциональное питание содержит только полезные питательные вещества.</p>
-        </li>
-        <li class="advantages__item">
-          <p class="advantages__description advantages__description--powder">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
-        </li>
-        <li class="advantages__item">
-          <p class="advantages__description advantages__description--eating">Замените один-два приема обычной еды на наше функциональное питание.</p>
-        </li>
-        <li class="advantages__item">
-          <p class="advantages__description advantages__description--time">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
-        </li>
-      </ul>
+      <div class="container">
+        <h2 class="advantages__title">Как это работает</h2>
+        <!-- Преимущества функционального питания -->
+        <ul class="advantages__list">
+          <li class="advantages__item">
+            <p class="advantages__description advantages__description--nutrients">Функциональное питание содержит только полезные питательные вещества.</p>
+          </li>
+          <li class="advantages__item">
+            <p class="advantages__description advantages__description--powder">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+          </li>
+          <li class="advantages__item">
+            <p class="advantages__description advantages__description--eating">Замените один-два приема обычной еды на наше функциональное питание.</p>
+          </li>
+          <li class="advantages__item">
+            <p class="advantages__description advantages__description--time">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+          </li>
+        </ul>
+      </div>
     </section>
     <!-- Секция с результатом программы -->
     <section class="result">
-      <h2 class="result__title">Живой пример</h2>
-      <p class="result__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-      <!-- Блок с описанием результата -->
-      <dl class="result__table">
-        <dt class="result__criterion">Снижение веса</dt>
-        <dd class="result__value">5 кг</dd>
-        <dt class="result__criterion">Затрачено времени</dt>
-        <dd class="result__value">60 дней</dd>
-      </dl>
-      <!-- Блок со слайдером -->
-      <div class="result__preview"></div>
+      <div class="container">
+        <h2 class="result__title">Живой пример</h2>
+        <p class="result__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+        <!-- Блок с описанием результата -->
+        <dl class="result__table">
+          <dt class="result__criterion">Снижение веса</dt>
+          <dd class="result__value">5 кг</dd>
+          <dt class="result__criterion">Затрачено времени</dt>
+          <dd class="result__value">60 дней</dd>
+        </dl>
+        <!-- Блок со слайдером -->
+        <div class="result__preview"></div>
+      </div>
     </section>
     <!-- Секция с контактными данными -->
     <section class="contacts">
-      <h2 class="visually-hidden">Контактная информация</h2>
-      <h3 class="contacts__subtitle">Приглашаем к сотрудничеству дилеров!</h3>
-      <address class="contacts__address">
-        <p class="contacts__address-text">
-          ул. Большая
-          Конюшенная, д. 19/8
-          Санкт-Петербург
-        </p>
-      </address>
+      <div class="container">
+        <h2 class="visually-hidden">Контактная информация</h2>
+        <h3 class="contacts__subtitle">Приглашаем к сотрудничеству дилеров!</h3>
+        <address class="contacts__address">
+          <p class="contacts__address-text">
+            ул. Большая
+            Конюшенная, д. 19/8
+            Санкт-Петербург
+          </p>
+        </address>
+      </div>
       <!-- Блок с интерактивной картой -->
       <div class="contacts__map map">
         <img class="map__image" src="#" width="999" height="999" alt="#">
@@ -118,33 +128,36 @@
   </main>
   <!-- Подвал сайта -->
   <footer class="page__footer">
-    <!-- Логотип сайта -->
-    <a class="logo-text" href="index.html" aria-current="page">
-      <span class="visually-hidden" lang="en">Логотип сайта Cat Energy</span>
-    </a>
-    <!-- Список социальных сетей -->
-    <ul class="social">
-      <!-- Мы Вконтакте -->
-      <li class="social__item">
-        <a class="social__link social__link--vk" href="https://vk.com/htmlacademy">
-          <span class="visually-hidden">Перейти в группу Вконтакте"</span>
-        </a>
-      </li>
-      <!-- Мы на YouTube -->
-      <li class="social__item">
-        <a class="social__link social__link--yt" href="https://www.youtube.com/user/htmlacademyru">
-          <span class="visually-hidden">Перейти на YouTube канал"</span>
-        </a>
-      </li>
-      <!-- Мы в Телеграм -->
-      <li class="social__item">
-        <a class="social__link social__link--tg" href="https://t.me/htmlacademy">
-          <span class="visually-hidden">Перейти на канал в Телеграм"</span>
-        </a>
-      </li>
-    </ul>
-    <!-- Блок с логотипом сайта разработчика -->
-    <a class="developer" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+    <div class="container">
+      <!-- Логотип сайта -->
+      <a class="logo" href="index.html" aria-current="page">
+        <img class="logo__text" src="#" width="999" height="999" alt="#">
+        <!-- <span class="visually-hidden" lang="en">Логотип сайта Cat Energy</span> -->
+      </a>
+      <!-- Список социальных сетей -->
+      <ul class="social">
+        <!-- Мы Вконтакте -->
+        <li class="social__item">
+          <a class="social__link social__link--vk" href="https://vk.com/htmlacademy">
+            <span class="visually-hidden">Перейти в группу Вконтакте"</span>
+          </a>
+        </li>
+        <!-- Мы на YouTube -->
+        <li class="social__item">
+          <a class="social__link social__link--yt" href="https://www.youtube.com/user/htmlacademyru">
+            <span class="visually-hidden">Перейти на YouTube канал"</span>
+          </a>
+        </li>
+        <!-- Мы в Телеграм -->
+        <li class="social__item">
+          <a class="social__link social__link--tg" href="https://t.me/htmlacademy">
+            <span class="visually-hidden">Перейти на канал в Телеграм"</span>
+          </a>
+        </li>
+      </ul>
+      <!-- Блок с логотипом сайта разработчика -->
+      <a class="developer" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+    </div>
   </footer>
 </body>
 
