Подключает растровую графику всех страниц. Вносит правки в наименование карточек товара.

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -50,7 +50,14 @@
           <!-- "Элемент списка" -->
           <li class="catalog__item">
             <a class="catalog__link" href="#">
-              <img class="catalog__image" src="#" width="999" height="999" alt="#">
+              <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="images/catalog/card-chicken500-desktop@1x.webp 1x, images/catalog/card-chicken500-desktop@2x.webp 2x" width="169" height="210">
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/catalog/card-chicken500-tablet@1x.webp 1x, images/catalog/card-chicken500-tablet@2x.webp 2x" width="200" height="210">
+                <source type="image/webp" media="(min-width: 320px)" srcset="images/catalog/card-chicken500-mobile@1x.webp 1x, images/catalog/card-chicken500-mobile@2x.webp 2x" width="140" height="107">
+                <source type="image/jpeg" media="(min-width: 1440px)" srcset="images/catalog/card-chicken500-desktop@1x.jpg 1x, images/catalog/card-chicken500-desktop@2x.jpg 2x" width="169" height="210">
+                <source type="image/jpeg" media="(min-width: 768px)" srcset="images/catalog/card-chicken500-tablet@1x.jpg 1x, images/catalog/card-chicken500-tablet@2x.jpg 2x" width="200" height="210">
+                <img class="catalog__image" src="images/catalog/card-chicken500-mobile@1x.jpg" srcset="images/catalog/card-chicken500-mobile@2x.jpg 2x" width="140" height="107" alt="Банка функционального питания со вкусом курицы объёмом 500 грамм">
+              </picture>
             </a>
             <a class="catalog__link" href="#">
               <h3 class="catalog__subtitle">Cat Energy Pro 500&nbsp;г</h3>
@@ -69,7 +76,14 @@
           <!-- "Элемент списка" -->
           <li class="catalog__item">
             <a class="catalog__link" href="#">
-              <img class="catalog__image" src="#" width="999" height="999" alt="#">
+              <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="images/catalog/card-chicken1000-desktop@1x.webp 1x, images/catalog/card-chicken1000-desktop@2x.webp 2x" width="169" height="210">
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/catalog/card-chicken1000-tablet@1x.webp 1x, images/catalog/card-chicken1000-tablet@2x.webp 2x" width="200" height="210">
+                <source type="image/webp" media="(min-width: 320px)" srcset="images/catalog/card-chicken1000-mobile@1x.webp 1x, images/catalog/card-chicken1000-mobile@2x.webp 2x" width="140" height="107">
+                <source type="image/jpeg" media="(min-width: 1440px)" srcset="images/catalog/card-chicken1000-desktop@1x.jpg 1x, images/catalog/card-chicken1000-desktop@2x.jpg 2x" width="169" height="210">
+                <source type="image/jpeg" media="(min-width: 768px)" srcset="images/catalog/card-chicken1000-tablet@1x.jpg 1x, images/catalog/card-chicken1000-tablet@2x.jpg 2x" width="200" height="210">
+                <img class="catalog__image" src="images/catalog/card-chicken1000-mobile@1x.jpg" srcset="images/catalog/card-chicken1000-mobile@2x.jpg 2x" width="140" height="107" alt="Банка функционального питания со вкусом курицы объёмом 1000 грамм">
+              </picture>
             </a>
             <a class="catalog__link" href="#">
               <h3 class="catalog__subtitle">Cat Energy Pro 1000&nbsp;г</h3>
@@ -88,7 +102,14 @@
           <!-- "Элемент списка" -->
           <li class="catalog__item">
             <a class="catalog__link" href="#">
-              <img class="catalog__image" src="#" width="999" height="999" alt="#">
+              <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="images/catalog/card-fish500-desktop@1x.webp 1x, images/catalog/card-fish500-desktop@2x.webp 2x" width="169" height="210">
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/catalog/card-fish500-tablet@1x.webp 1x, images/catalog/card-fish500-tablet@2x.webp 2x" width="200" height="210">
+                <source type="image/webp" media="(min-width: 320px)" srcset="images/catalog/card-fish500-mobile@1x.webp 1x, images/catalog/card-fish500-mobile@2x.webp 2x" width="140" height="107">
+                <source type="image/jpeg" media="(min-width: 1440px)" srcset="images/catalog/card-fish500-desktop@1x.jpg 1x, images/catalog/card-fish500-desktop@2x.jpg 2x" width="169" height="210">
+                <source type="image/jpeg" media="(min-width: 768px)" srcset="images/catalog/card-fish500-tablet@1x.jpg 1x, images/catalog/card-fish500-tablet@2x.jpg 2x" width="200" height="210">
+                <img class="catalog__image" src="images/catalog/card-fish500-mobile@1x.jpg" srcset="images/catalog/card-fish500-mobile@2x.jpg 2x" width="140" height="107" alt="Банка функционального питания со вкусом рыбы объёмом 500 грамм">
+              </picture>
             </a>
             <a class="catalog__link" href="#">
               <h3 class="catalog__subtitle">Cat Energy Pro 500&nbsp;г</h3>
@@ -107,7 +128,14 @@
           <!-- "Элемент списка" -->
           <li class="catalog__item">
             <a class="catalog__link" href="#">
-              <img class="catalog__image" src="#" width="999" height="999" alt="#">
+              <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="images/catalog/card-fish1000-desktop@1x.webp 1x, images/catalog/card-fish1000-desktop@2x.webp 2x" width="169" height="210">
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/catalog/card-fish1000-tablet@1x.webp 1x, images/catalog/card-fish1000-tablet@2x.webp 2x" width="200" height="210">
+                <source type="image/webp" media="(min-width: 320px)" srcset="images/catalog/card-fish1000-mobile@1x.webp 1x, images/catalog/card-fish1000-mobile@2x.webp 2x" width="140" height="107">
+                <source type="image/jpeg" media="(min-width: 1440px)" srcset="images/catalog/card-fish1000-desktop@1x.jpg 1x, images/catalog/card-fish1000-desktop@2x.jpg 2x" width="169" height="210">
+                <source type="image/jpeg" media="(min-width: 768px)" srcset="images/catalog/card-fish1000-tablet@1x.jpg 1x, images/catalog/card-fish1000-tablet@2x.jpg 2x" width="200" height="210">
+                <img class="catalog__image" src="images/catalog/card-fish1000-mobile@1x.jpg" srcset="images/catalog/card-fish1000-mobile@2x.jpg 2x" width="140" height="107" alt="Банка функционального питания со вкусом рыбы объёмом 1000 грамм">
+              </picture>
             </a>
             <a class="catalog__link" href="#">
               <h3 class="catalog__subtitle">Cat Energy Pro 1000&nbsp;г</h3>
@@ -126,7 +154,14 @@
           <!-- "Элемент списка" -->
           <li class="catalog__item">
             <a class="catalog__link" href="#">
-              <img class="catalog__image" src="#" width="999" height="999" alt="#">
+              <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="images/catalog/card-buckwheat500-desktop@1x.webp 1x, images/catalog/card-buckwheat500-desktop@2x.webp 2x" width="169" height="210">
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/catalog/card-buckwheat500-tablet@1x.webp 1x, images/catalog/card-buckwheat500-tablet@2x.webp 2x" width="200" height="210">
+                <source type="image/webp" media="(min-width: 320px)" srcset="images/catalog/card-buckwheat500-mobile@1x.webp 1x, images/catalog/card-buckwheat500-mobile@2x.webp 2x" width="140" height="107">
+                <source type="image/jpeg" media="(min-width: 1440px)" srcset="images/catalog/card-buckwheat500-desktop@1x.jpg 1x, images/catalog/card-buckwheat500-desktop@2x.jpg 2x" width="169" height="210">
+                <source type="image/jpeg" media="(min-width: 768px)" srcset="images/catalog/card-buckwheat500-tablet@1x.jpg 1x, images/catalog/card-buckwheat500-tablet@2x.jpg 2x" width="200" height="210">
+                <img class="catalog__image" src="images/catalog/card-buckwheat500-mobile@1x.jpg" srcset="images/catalog/card-buckwheat500-mobile@2x.jpg 2x" width="140" height="107" alt="Банка функционального питания c гречкой объёмом 500 грамм">
+              </picture>
             </a>
             <a class="catalog__link" href="#">
               <h3 class="catalog__subtitle">Cat Energy Slim 500&nbsp;г</h3>
@@ -145,7 +180,14 @@
           <!-- "Элемент списка" -->
           <li class="catalog__item">
             <a class="catalog__link" href="#">
-              <img class="catalog__image" src="#" width="999" height="999" alt="#">
+              <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="images/catalog/card-buckwheat1000-desktop@1x.webp 1x, images/catalog/card-buckwheat1000-desktop@2x.webp 2x" width="169" height="210">
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/catalog/card-buckwheat1000-tablet@1x.webp 1x, images/catalog/card-buckwheat1000-tablet@2x.webp 2x" width="200" height="210">
+                <source type="image/webp" media="(min-width: 320px)" srcset="images/catalog/card-buckwheat1000-mobile@1x.webp 1x, images/catalog/card-buckwheat1000-mobile@2x.webp 2x" width="140" height="107">
+                <source type="image/jpeg" media="(min-width: 1440px)" srcset="images/catalog/card-buckwheat1000-desktop@1x.jpg 1x, images/catalog/card-buckwheat1000-desktop@2x.jpg 2x" width="169" height="210">
+                <source type="image/jpeg" media="(min-width: 768px)" srcset="images/catalog/card-buckwheat1000-tablet@1x.jpg 1x, images/catalog/card-buckwheat1000-tablet@2x.jpg 2x" width="200" height="210">
+                <img class="catalog__image" src="../source/images/catalog/" srcset="images/catalog/card-buckwheat1000-mobile@2x.jpg 2x" width="140" height="107" alt="Банка функционального питания c гречкой объёмом 1000 грамм">
+              </picture>
             </a>
             <a class="catalog__link" href="#">
               <h3 class="catalog__subtitle">Cat Energy Slim 1000&nbsp;г</h3>
@@ -164,7 +206,14 @@
           <!-- "Элемент списка" -->
           <li class="catalog__item">
             <a class="catalog__link" href="#">
-              <img class="catalog__image" src="#" width="999" height="999" alt="#">
+              <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="images/catalog/card-rice500-desktop@1x.webp 1x, images/catalog/card-rice500-desktop@2x.webp 2x" width="169" height="210">
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/catalog/card-rice500-tablet@1x.webp 1x, images/catalog/card-rice500-tablet@2x.webp 2x" width="200" height="210">
+                <source type="image/webp" media="(min-width: 320px)" srcset="images/catalog/card-rice500-mobile@1x.webp 1x, images/catalog/card-rice500-mobile@2x.webp 2x" width="140" height="107">
+                <source type="image/jpeg" media="(min-width: 1440px)" srcset="images/catalog/card-rice500-desktop@1x.jpg 1x, images/catalog/card-rice500-desktop@2x.jpg 2x" width="169" height="210">
+                <source type="image/jpeg" media="(min-width: 768px)" srcset="images/catalog/card-rice500-tablet@1x.jpg 1x, images/catalog/card-rice500-tablet@2x.jpg 2x" width="200" height="210">
+                <img class="catalog__image" src="images/catalog/card-rice500-mobile@1x.jpg" srcset="images/catalog/card-rice500-mobile@2x.jpg 2x" width="140" height="107" alt="Банка функционального питания c рисом объёмом 500 грамм">
+              </picture>
             </a>
             <a class="catalog__link" href="#">
               <h3 class="catalog__subtitle">Cat Energy Slim 500&nbsp;г</h3>
