--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="favicon.ico"><!-- 32x32 -->
   <link rel="icon" href="favicons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="favicons/180.png"><!-- 180x180 -->
-  <link rel="manifest" href="/source/manifest.webmanifest">
+  <link rel="manifest" href="manifest.webmanifest">
   <script src="scripts/index.js" defer></script>
 </head>
 
