Создаёт миксины для заголовков/ подзаголовков страниц сайта, заменяет блок button на одноимённый миксин. Вносит правки в разметку - наименование заголовков/ подзаголовков

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -247,7 +247,7 @@
       <!-- Секция с дополнительными товарами -->
       <section class="additionally">
         <div class="container">
-          <h2 class="additionally__title">Дополнительные товары</h2>
+          <h2 class="additionally__heading">Дополнительные товары</h2>
           <!-- Список дополнительных товаров -->
           <ul class="additionally__products">
             <!-- "Элемент списка" -->
@@ -303,7 +303,7 @@
       <!-- Секция с акциями и новинками -->
       <section class="promotions">
         <div class="container">
-          <h2 class="promotions__title">Акции и новинки</h2>
+          <h2 class="promotions__heading">Акции и новинки</h2>
           <p class="promotions__text">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
           <!-- Форма подписки на акции и новинки -->
           <form class="promotions__form form" action="https://echo.htmlacademy.ru" method="post">
