--- a/source/index.html
+++ b/source/index.html
@@ -89,7 +89,7 @@
       <!-- Секция с преимуществами функционального питания -->
       <section class="advantages">
         <div class="container">
-          <h2 class="advantages__title">Как это работает</h2>
+          <h2 class="advantages__heading">Как это работает</h2>
           <!-- Преимущества функционального питания -->
           <ul class="advantages__list">
             <li class="advantages__item">
@@ -110,7 +110,7 @@
       <!-- Секция с результатом программы -->
       <section class="result">
         <div class="container">
-          <h2 class="result__title">Живой пример</h2>
+          <h2 class="result__heading">Живой пример</h2>
           <p class="result__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
           <!-- Блок с описанием результата -->
           <dl class="result__table">
