Добавляет векторную графику, меняет растр для блока Контакты

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -78,7 +78,7 @@
                 <dt class="catalog__feature catalog__feature--price">Цена</dt>
                 <dd class="catalog__feature catalog__feature--value">700&nbsp;₽</dd>
               </dl>
-              <a class="catalog__button button" href="#">Заказать</a>
+              <a class="catalog__button" href="#">Заказать</a>
             </li>
             <!-- "Элемент списка" -->
             <li class="catalog__item">
@@ -104,7 +104,7 @@
                 <dt class="catalog__feature catalog__feature--price">Цена</dt>
                 <dd class="catalog__feature catalog__feature--value">1000&nbsp;₽</dd>
               </dl>
-              <a class="catalog__button button" href="#">Заказать</a>
+              <a class="catalog__button" href="#">Заказать</a>
             </li>
             <!-- "Элемент списка" -->
             <li class="catalog__item">
@@ -130,7 +130,7 @@
                 <dt class="catalog__feature catalog__feature--price">Цена</dt>
                 <dd class="catalog__feature catalog__feature--value">700&nbsp;₽</dd>
               </dl>
-              <a class="catalog__button button" href="#">Заказать</a>
+              <a class="catalog__button" href="#">Заказать</a>
             </li>
             <!-- "Элемент списка" -->
             <li class="catalog__item">
@@ -156,7 +156,7 @@
                 <dt class="catalog__feature catalog__feature--price">Цена</dt>
                 <dd class="catalog__feature catalog__feature--value">1000&nbsp;₽</dd>
               </dl>
-              <a class="catalog__button button" href="#">Заказать</a>
+              <a class="catalog__button" href="#">Заказать</a>
             </li>
             <!-- "Элемент списка" -->
             <li class="catalog__item">
@@ -182,7 +182,7 @@
                 <dt class="catalog__feature catalog__feature--price">Цена</dt>
                 <dd class="catalog__feature catalog__feature--value">400&nbsp;₽</dd>
               </dl>
-              <a class="catalog__button button" href="#">Заказать</a>
+              <a class="catalog__button" href="#">Заказать</a>
             </li>
             <!-- "Элемент списка" -->
             <li class="catalog__item">
@@ -208,7 +208,7 @@
                 <dt class="catalog__feature catalog__feature--price">Цена</dt>
                 <dd class="catalog__feature catalog__feature--value">700&nbsp;₽</dd>
               </dl>
-              <a class="catalog__button button" href="#">Заказать</a>
+              <a class="catalog__button" href="#">Заказать</a>
             </li>
             <!-- "Элемент списка" -->
             <li class="catalog__item">
@@ -234,12 +234,12 @@
                 <dt class="catalog__feature catalog__feature--price">Цена</dt>
                 <dd class="catalog__feature catalog__feature--value">500&nbsp;₽</dd>
               </dl>
-              <a class="catalog__button button" href="#">Заказать</a>
+              <a class="catalog__button" href="#">Заказать</a>
             </li>
             <li class="catalog__item catalog__item--download">
               <h3 class="catalog__subtitle">Показать ещё 100500 товаров</h3>
               <p class="catalog__text">На самом деле вкусов гораздо больше!</p>
-              <a class="catalog__button button catalog__button--to-all" href="#">Показать все</a>
+              <a class="catalog__button catalog__button--to-all" href="#">Показать все</a>
             </li>
           </ul>
         </div>
@@ -311,7 +311,7 @@
               <span class="visually-hidden">Введите ваш e-mail:</span>
             </label>
             <input class="form__input" id="email" name="email" type="email" placeholder="кuklachev@gmail.com" required>
-            <button class="form__button button" type="submit">Подписаться</button>
+            <button class="form__button" type="submit">Подписаться</button>
           </form>
         </div>
       </section>
