--- a/source/index.html
+++ b/source/index.html
@@ -64,7 +64,7 @@
             images/intro/intro-img-tablet@2x.png 2x" width="709" height="609">
             <img class="intro__image" src="images/intro/intro-img-mobile@1x.png" srcset="images/intro/intro-img-mobile@2x.png 2x" width="280" height="270" alt="Оранжевая банка корма для котов со вкусом курицы от Cat Energy. Объём 500грамм.">
           </picture>
-          <a class="intro__button button" href="#">Подобрать программу</a>
+          <a class="intro__button" href="#">Подобрать программу</a>
         </div>
       </section>
       <!-- Секция с программами питания -->
